# AndroidVenture

./: .gitignore  LICENSE  NETWORK_UPLOAD_GUIDE.md  README.md  add-firewall-rule.bat  build.gradle  settings.gradle  setup.ps1
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/androidventure/edgedetector/: CameraManager.kt  FrameUploader.kt  GLRenderer.kt  MainActivity.kt
app/src/main/res/drawable/: button_primary.xml  button_success.xml  control_panel_background.xml  fps_badge_background.xml  gradient_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
web/: .gitignore  app.js  index.html  network-receiver.html  package-lock.json  package.json  server.js  styles.css  test-ws.js  webcam-test.html
web/src/: frameRenderer.ts  index.ts  statsManager.ts  types.ts
